# jcc-tft-simulator

./: .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  start.sh
src/jcc/: __init__.py  cli.py  collector.py  database.py  images.py
src/jcc/web/: __init__.py  server.py
src/jcc/web/static/: app.js  index.html  styles.css
tests/: test_collector.py  test_compositions.py
